# parsee-datasets

./: .gitignore  README.md  pyproject.toml
datasets/finrag/: README.md
datasets/finrag/data/: README.md
datasets/finrag/data/rag-text/: README.md
datasets/finrag/data/raw/: README.md
datasets/finrag/data/selection-image/: README.md  data_full.parquet
datasets/finrag/data/selection-text/: README.md  data_full.parquet
datasets/finrag/study/: README.md
datasets/finrag/study/data/v1/: rag_text_50.csv  selection_image_50.csv  selection_text_50.csv
datasets/finrag/study/data/v2/: selection_image_100.csv  selection_text_100.csv
datasets/finrag/study/evaluation/: evaluation_v1_dataset.ipynb  evaluation_v2_dataset.ipynb  rag_text.ipynb  run_evaluation.py
datasets/invoices/: README.md
datasets/invoices/langchain-pypdf-loader/: README.md  create_dataset.ipynb  evaluation.ipynb
datasets/invoices/langchain-pypdf-loader/data/: invoices_langchain.csv  invoices_langchain.parquet
datasets/invoices/parsee-loader/: README.md  evaluation.ipynb
datasets/invoices/parsee-loader/data/: invoices_parsee.csv  invoices_parsee.parquet
datasets/revenues/: README.md
datasets/revenues/langchain-pypdf-loader/: README.md  create_dataset.ipynb  evaluation.ipynb
datasets/revenues/langchain-pypdf-loader/data/: revenues_langchain.csv  revenues_langchain.parquet
datasets/revenues/parsee-loader/: README.md  evaluation.ipynb
datasets/revenues/parsee-loader/data/: revenues_parsee.csv  revenues_parsee.parquet
(+41 files in other folders)
