[tool.poetry]
name = "parsee-datasets"
version = "0.1.0"
description = ""
authors = ["Parsee.ai <info@parsee.ai>"]
homepage = "https://parsee.ai"
packages = [{include = "parsee"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.3"
parsee-core = "^0.1.3.11"
pyarrow = "^15.0.1"


[tool.poetry.dev-dependencies]

[tool.poetry.group.extras.dependencies]
langchain = "^0.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
